@@ -832,6 +832,13 @@ class PageTreeForm(forms.Form):
 
 class MovePageForm(PageTreeForm):
 
+    def clean(self):
+        cleaned_data = super(MovePageForm, self).clean()
+
+        if self.page.is_home and cleaned_data.get('target'):
+            self.add_error('target', force_text(_('You can\'t move the home page inside another page')))
+        return cleaned_data
+
     def get_tree_options(self):
         options = super(MovePageForm, self).get_tree_options()
         target_node, target_node_position = options
